fix(nui): Visibility setting and building

--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -7,6 +7,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   height: 100vh;
+  background: none !important;
 }
 
 #root {
